# ETLHive-Machine-Learning

./: Time_Series_Analysis_and_Forecasting.ipynb  main.py  pyproject.toml  requirements.txt  utis.py
01 SImple Linear Regression/: Regression.ipynb
02 Multiple Linear Regression/: MLR.ipynb
03 Manual Preprocessing/: Preprocessing.ipynb  car_model.joblib  ohe.joblib
04 Automated Preprocessing/: car_model.joblib  pipeline.ipynb  pre.joblib
05 Feature selection/: Backward.ipynb  Forward.ipynb  forward_results.csv  model_backward.joblib  model_forward.joblib  pre_backward.joblib  pre_forward.joblib
06 Regularisation/: Regularisation.ipynb  evaluation.csv  poly_lasso.joblib  pre.joblib  results.csv  sel.joblib
07 Logistic Regression and DT/: dtc_model.joblib  dtc_results.csv  evaluation.csv  logistic.ipynb
08 Decision Tree Regression/: Decision_Tree_Regression.ipynb  dtr_model.joblib
09 Ensemble Techniques/: Ensembled.ipynb  evaluation.csv  pre.joblib
10 KNN and SVM/: drug_model.joblib  evaluation.csv  knn&svm.ipynb
11 Algo Evaluation/: algo_eval.ipynb  loan_model.joblib  loan_results.csv
12 Unsupervised Clustering/: clustering.ipynb  kmeans_results.csv
13 Time Series Analysis and Forecasting/: forecast.csv
Classification Project/: class_project.ipynb  loan_model.joblib  machine_results.csv  pre.joblib
Regression Project/: Regression_Project.ipynb  evaluation.csv  model.joblib  preprocessor.joblib  results.csv  selector.joblib
